2009-09-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* links.php: removed sensorella as requested in webdoc 2854390,
	  updated other apparent dead or unrelated links, to be removed later

2009-05-09 Borut Razem <borut.razem AT siol.net>

	* index.php: implemented FRE #2786753: Remove Borland C support

2009-03-22 Borut Razem <borut.razem AT siol.net>

	* index.php: added News - sdcc 2.9.0 release

2009-03-15 Borut Razem <borut.razem AT siol.net>

	* index.php:
	  added News - sdcc 2.9.0 RC2, removed old sdcc 2.8.0 release news
	* previous.php: added old news

2009-03-01 Borut Razem <borut.razem AT siol.net>

	* index.php: sdcc asxxxx under GPL, added News - sdcc 2.9.0 RC1

2009-02-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* left_menu.inc: updated left menu with a link to the forum

2009-01-04 Borut Razem <borut.razem AT siol.net>

	* index.php: updated John Hartman's e-mail address,
	  removed mailto links
	* snap.php: changed folder icon with the one found at
	  http://www.iconarchive.com/show/folder-icons-by-kodz-red/folder-B4-6-icon.html
	  images/dir.gif: removed
	  images/folder-B4-6-32x32.png: added

2008-11-14 Borut Razem <borut.razem AT siol.net>

	* snap_footer.php: direct access not possible any more

2008-03-30 Borut Razem <borut.razem AT siol.net>

	* index.php: added News - sdcc 2.8.0 release
	* previous.php: previous news moved from index.php

2008-03-09 Borut Razem <borut.razem AT siol.net>

	* index.php: added News - sdcc 2.8.0 RC2

2008-03-09 Borut Razem <borut.razem AT siol.net>

	* index.php: added News - sdcc 2.8.0 RC1
	* previous.php: previous news moved from index.php

2008-02-21 Borut Razem <borut.razem AT siol.net>

	* index.php: added Philipp Klaus Krause to the list of developers

2007-10-30 Borut Razem <borut.razem AT siol.net>

	* left_menu.inc: updated left menu

2007-10-29 Borut Razem <borut.razem AT siol.net>

	* snap.php: rearranged, added new category Mac OS X

2007-08-20 Borut Razem <borut.razem AT siol.net>
